--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Les chevaliers noirs !</h1>
-    <div>
-        Il était une fois un jedi perdu dans l'espace.
-    </div>
+    <span>
+        Les jedis sont en difficultés
+    </span>
   </body>
 </html>
