--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>Planètes</h2>
     </div>
     <div>
-      <h3>Nouveau commit</h3>
+      <h3>- Nouveau commit</h3>
     </div>
   </body>
 </html>
