--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Les jedis sont en difficultés
     </span>
     <div>
-      Et voilà un vessaie ...
+      Et voilà un vessaie
     </div>
     <ul>
       <li>1. Falcon</li>
